# wireless-Vision-Aid-for-the-blind

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCTION_READINESS.md  PROJECT_OWNERSHIP.md  QUICK_START.md  Readme.md  camera_gui.py  dashboard_tk.py  docker-compose.yml  enable_onecore_voices.ps1  esp32_cam_stream.ino  export_accelerated_models.py  install_tts_voice_packs.ps1  main.py  metrics.py  multilingual_labels.common.json  navigation_pipeline.py  offline_utils.py  production.md  pyproject.toml  quick_start.sh  requirements.txt  setup.cfg  smartphone_camera.py  test_system.py  train_navigation_model.py  udp_streaming.py  vision_server.py  wvab_config.sample.json
.github/workflows/: ci.yml
config/: config.yaml  goal.json
core/: config.py  logger.py
cpp/: CMakeLists.txt  main_demo.cpp  navigation_planner.cpp  navigation_planner.h  speaker_cli.cpp
deployment/: prometheus.yml
deployment/rpi/: wvab_edge.env  wvab_edge.service  wvab_edge_start.sh
mapping/: occupancy_grid.py  orbslam3_bridge.py  slam.py
navigation/: a_star.py  planner.py  trajectory.py
perception/: __init__.py  depth_estimator.py  perception_mapping.py
tests/: test_smoke.py
tools/: update_goal.py
training/: DATASET_GUIDE.md  DOWNLOADS.md  MERGE_GUIDE.md  auto_download.py  depth_diag.py  merge_convert_coco.py  train_custom.py  wvab_custom.yaml
