# --------------------------------------------------------------------------------------------- # 
# | Name: Md. Shahanur Islam Shagor                                                           | # 
# | Autonomous Systems & UAV Researcher | Cybersecurity    | Specialist | Software Engineer   | #
# | Voronezh State University of Forestry and Technologies                                    | # 
# | Build for Blind people within 15$                                                         | # 
# --------------------------------------------------------------------------------------------- # 

[metadata]
name = wvab-system
version = 0.1.0
description = WVAB Autonomous Navigation System
author = WVAB Team
license = MIT

[options]
python_requires = >=3.8
py_modules =
    camera_gui
    vision_server
    udp_streaming
    navigation_pipeline
    metrics
    offline_utils
    export_accelerated_models
    smartphone_camera
    train_navigation_model
    test_system
install_requires =
    opencv-python
    opencv-contrib-python
    ultralytics
    torch
    torchvision
    numpy
    pyttsx3
    urllib3
    requests
    Pillow
    pycryptodome
    websockets
    paho-mqtt
    openvino
    pyyaml
    psutil
    prometheus-client